<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_view_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_workout_edit_title"
            style="@style/PageTitle"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="@dimen/rounded_value_normal"
            android:layout_marginTop="@dimen/padding_view_large">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectImageClicked">

                <ImageView
                    android:id="@+id/workout_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/default_workout_image"
                    android:foreground="@drawable/image_overlay"/>

                <LinearLayout
                    android:id="@+id/workout_image_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp"
                        android:layout_gravity="center_horizontal"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_create_workout_select_photo"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_big"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_workout_input_hint_name"
            android:inputType="textCapSentences"
            android:layout_marginTop="@dimen/padding_view_normal"
            style="@style/Input"/>

        <EditText
            android:id="@+id/workout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_workout_input_hint_desc"
            android:inputType="textCapSentences"
            android:layout_marginTop="@dimen/padding_view_normal"
            style="@style/Input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            android:layout_marginTop="@dimen/padding_view_normal"
            android:onClick="onSaveWorkoutButtonClicked"
            style="@style/ButtonDark"/>

    </LinearLayout>

</RelativeLayout>